# orange-checker

./: .gitignore  .pre-commit-config.yaml  CLAUDE.MD  adu.py  config.py  inference.py  init-dataset.py  main.py  pyproject.toml  split.py  train.py  tui.py
automation/: browser_setup.py  captcha_handler.py  form_handler.py  orange_automation.py
models/: image_processor.py  model_loader.py
modules/: __init__.py  browser_handler.py  captcha_handler.py  config.py  label.py  requests_handler.py
utils/: helpers.py
