[project]
name = "orange-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.19"
dependencies = [
    "pillow==12.0.0",
    "playwright==1.56.0",
    "playwright-stealth==2.0.0",
    "python-ghost-cursor==0.1.1",
    "requests==2.32.5",
    "torch==2.9.1",
    "torchvision==0.24.1",
]
[tool.uv]
add-bounds = "exact"
